Neste commit, criei novas pastas para melhorar a organização dos arquivos de css. Criei a pagina de cadastro juntamente de seu css.

--- a/PageCadastro.html
+++ b/PageCadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 
@@ -8,7 +8,7 @@
     <title>Document</title>
 
     <!-- Links CSS -->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/styleCadastro.css">
 
     <!-- Link da biblioteca de icones BOXICONS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -23,7 +23,13 @@
 
     <form action="" class="container">
 
-        <h1 data-aos="flip-up" data-aos-duration="2000"> Login </h1>
+        <h1 data-aos="flip-up" data-aos-duration="2000"> Cadastro </h1>
+
+        <div class="div-input" data-aos="flip-up" data-aos-duration="2000">
+
+            <input type="text" placeholder="Nome" required>
+
+        </div>
 
         <div class="div-input" data-aos="flip-up" data-aos-duration="2000">
 
@@ -41,30 +47,25 @@
 
         </div>
 
-        <div class="div-lembrar-senha" data-aos="flip-up" data-aos-duration="2000">
 
-            <label> <input type="checkbox">Lembre-me</label>
-
-            <a href="">Esqueceu a senha?</a>
-
-        </div>
 
         <div class="div-btn-login" data-aos="flip-up" data-aos-duration="2000">
 
-            <button type="submit">Logar-se</button>
+            <button type="submit">Cadastrar-se</button>
 
         </div>
 
-        <div class="div-criar-conta">
+        <div class="div-voltar-login">
 
-            <p data-aos="flip-up" data-aos-duration="2000">Não tem uma conta? <a href="PageCadastro.html">Clique aqui</a></p>
+            <p data-aos="flip-up" data-aos-duration="2000"><a href="index.html">Voltar para Login</a></p>
 
         </div>
 
     </form>
 
     <!-- Link da biblioteca de animações AOS -->
-    <script src="/JS/script.js"></script>
+    <script src="JS/script.js"></script>
+
 </body>
 
 </html>
